[package]
name = "amiga-ros-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tonic = "0.8.3"
chrono = "0.4"
prost = "0.11.8"
futures = "0.3.26"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
rosrust = "0.9"
rosrust_msg = "0.1"
crossterm = "0.26.1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
egui = "0.21"
eframe = "0.21"

[build-dependencies]
tonic-build = "0.8.3"
